asn-parser/y.output

state 0
	$accept: .ParseASN $end 

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  error

	ParseModules  goto 2
	ParseModule  goto 3
	ParseModuleIdentifier  goto 4
	ParseString  goto 5
	ParseASN  goto 1

state 1
	$accept:  ParseASN.$end 

	$end  accept
	.  error


state 2
	ParseASN:  ParseModules.    (1)
	ParseModules:  ParseModules.ParseModule 

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 1 (src line 465)

	ParseModule  goto 8
	ParseModuleIdentifier  goto 4
	ParseString  goto 5

state 3
	ParseModules:  ParseModule.    (2)

	.  reduce 2 (src line 475)


state 4
	ParseModule:  ParseModuleIdentifier.DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 

	DEFINITIONS_SYMBOL  shift 9
	.  error


state 5
	ParseModuleIdentifier:  ParseString.ParseDefinitiveIdentification 
	ParseDefinitiveIdentification: .    (14)

	CURLY_START  shift 12
	.  reduce 14 (src line 608)

	ParseDefinitiveIdentification  goto 10
	ParseDefinitiveOID  goto 11

state 6
	ParseString:  TokenCapitalString.    (543)

	.  reduce 543 (src line 4710)


state 7
	ParseString:  TokenString.    (544)

	.  reduce 544 (src line 4714)


state 8
	ParseModules:  ParseModules ParseModule.    (3)

	.  reduce 3 (src line 481)


state 9
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL.ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 
	ParseEncodingReferenceDefault: .    (12)

	TokenCapitalString  shift 14
	.  reduce 12 (src line 593)

	ParseEncodingReferenceDefault  goto 13

state 10
	ParseModuleIdentifier:  ParseString ParseDefinitiveIdentification.    (10)

	.  reduce 10 (src line 573)


state 11
	ParseDefinitiveIdentification:  ParseDefinitiveOID.    (13)

	.  reduce 13 (src line 604)


state 12
	ParseDefinitiveOID:  CURLY_START.ParseDefinitiveObjIdComponentList CURLY_END 

	MINUS  shift 23
	TokenString  shift 20
	TokenInteger  shift 22
	TokenFloat  shift 24
	.  error

	ParseDefinitiveObjIdComponentList  goto 15
	ParseDefinitiveObjIdComponent  goto 16
	ParseDefinitiveNameForm  goto 17
	ParseDefinitiveNumberForm  goto 18
	ParseDefinitiveNameAndNumberForm  goto 19
	ParseNumber  goto 21

state 13
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault.ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 
	ParseTagDefault: .    (27)

	AUTOMATIC_SYMBOL  shift 28
	EXPLICIT_SYMBOL  shift 27
	IMPLICIT_SYMBOL  shift 26
	.  reduce 27 (src line 709)

	ParseTagDefault  goto 25

state 14
	ParseEncodingReferenceDefault:  TokenCapitalString.INSTRUCTIONS_SYMBOL 

	INSTRUCTIONS_SYMBOL  shift 29
	.  error


state 15
	ParseDefinitiveOID:  CURLY_START ParseDefinitiveObjIdComponentList.CURLY_END 
	ParseDefinitiveObjIdComponentList:  ParseDefinitiveObjIdComponentList.ParseDefinitiveObjIdComponent 

	CURLY_END  shift 30
	MINUS  shift 23
	TokenString  shift 20
	TokenInteger  shift 22
	TokenFloat  shift 24
	.  error

	ParseDefinitiveObjIdComponent  goto 31
	ParseDefinitiveNameForm  goto 17
	ParseDefinitiveNumberForm  goto 18
	ParseDefinitiveNameAndNumberForm  goto 19
	ParseNumber  goto 21

state 16
	ParseDefinitiveObjIdComponentList:  ParseDefinitiveObjIdComponent.    (16)

	.  reduce 16 (src line 628)


state 17
	ParseDefinitiveObjIdComponent:  ParseDefinitiveNameForm.    (18)

	.  reduce 18 (src line 646)


state 18
	ParseDefinitiveObjIdComponent:  ParseDefinitiveNumberForm.    (19)

	.  reduce 19 (src line 650)


state 19
	ParseDefinitiveObjIdComponent:  ParseDefinitiveNameAndNumberForm.    (20)

	.  reduce 20 (src line 653)


state 20
	ParseDefinitiveNameForm:  TokenString.    (21)
	ParseDefinitiveNameAndNumberForm:  TokenString.ROUND_START ParseNumber ROUND_END 

	ROUND_START  shift 32
	.  reduce 21 (src line 661)


state 21
	ParseDefinitiveNumberForm:  ParseNumber.    (22)

	.  reduce 22 (src line 672)


state 22
	ParseNumber:  TokenInteger.    (545)

	.  reduce 545 (src line 4719)


state 23
	ParseNumber:  MINUS.TokenInteger 
	ParseNumber:  MINUS.TokenFloat 

	TokenInteger  shift 33
	TokenFloat  shift 34
	.  error


state 24
	ParseNumber:  TokenFloat.    (547)

	.  reduce 547 (src line 4726)


state 25
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault.ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 
	ParseExtensionDefault: .    (29)

	EXTENSIBILITY_SYMBOL  shift 36
	.  reduce 29 (src line 723)

	ParseExtensionDefault  goto 35

state 26
	ParseTagDefault:  IMPLICIT_SYMBOL.TAGS_SYMBOL 

	TAGS_SYMBOL  shift 37
	.  error


state 27
	ParseTagDefault:  EXPLICIT_SYMBOL.TAGS_SYMBOL 

	TAGS_SYMBOL  shift 38
	.  error


state 28
	ParseTagDefault:  AUTOMATIC_SYMBOL.TAGS_SYMBOL 

	TAGS_SYMBOL  shift 39
	.  error


state 29
	ParseEncodingReferenceDefault:  TokenCapitalString INSTRUCTIONS_SYMBOL.    (11)

	.  reduce 11 (src line 589)


state 30
	ParseDefinitiveOID:  CURLY_START ParseDefinitiveObjIdComponentList CURLY_END.    (15)

	.  reduce 15 (src line 617)


state 31
	ParseDefinitiveObjIdComponentList:  ParseDefinitiveObjIdComponentList ParseDefinitiveObjIdComponent.    (17)

	.  reduce 17 (src line 634)


state 32
	ParseDefinitiveNameAndNumberForm:  TokenString ROUND_START.ParseNumber ROUND_END 

	MINUS  shift 23
	TokenInteger  shift 22
	TokenFloat  shift 24
	.  error

	ParseNumber  goto 40

state 33
	ParseNumber:  MINUS TokenInteger.    (546)

	.  reduce 546 (src line 4723)


state 34
	ParseNumber:  MINUS TokenFloat.    (548)

	.  reduce 548 (src line 4729)


state 35
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault.ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 

	COLON  shift 42
	.  error

	ParseAssignementSymbol  goto 41

state 36
	ParseExtensionDefault:  EXTENSIBILITY_SYMBOL.IMPLIED_SYMBOL 

	IMPLIED_SYMBOL  shift 43
	.  error


state 37
	ParseTagDefault:  IMPLICIT_SYMBOL TAGS_SYMBOL.    (24)

	.  reduce 24 (src line 699)


state 38
	ParseTagDefault:  EXPLICIT_SYMBOL TAGS_SYMBOL.    (25)

	.  reduce 25 (src line 703)


state 39
	ParseTagDefault:  AUTOMATIC_SYMBOL TAGS_SYMBOL.    (26)

	.  reduce 26 (src line 706)


state 40
	ParseDefinitiveNameAndNumberForm:  TokenString ROUND_START ParseNumber.ROUND_END 

	ROUND_END  shift 44
	.  error


state 41
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol.BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL 

	BEGIN_SYMBOL  shift 45
	.  error


state 42
	ParseAssignementSymbol:  COLON.COLON EQUALITY 

	COLON  shift 46
	.  error


state 43
	ParseExtensionDefault:  EXTENSIBILITY_SYMBOL IMPLIED_SYMBOL.    (28)

	.  reduce 28 (src line 719)


state 44
	ParseDefinitiveNameAndNumberForm:  TokenString ROUND_START ParseNumber ROUND_END.    (23)

	.  reduce 23 (src line 683)


 45: reduce/reduce conflict  (red'ns 32 and 47) on ENCODINGCONTROL_SYMBOL
 45: reduce/reduce conflict  (red'ns 32 and 47) on END_SYMBOL
45: shift/reduce conflict (shift 51(0), red'n 47(0)) on EXPORTS_SYMBOL
 45: reduce/reduce conflict  (red'ns 32 and 36) on ENCODINGCONTROL_SYMBOL
 45: reduce/reduce conflict  (red'ns 32 and 36) on END_SYMBOL
45: shift/reduce conflict (shift 50(0), red'n 36(0)) on IMPORTS_SYMBOL
 45: reduce/reduce conflict  (red'ns 47 and 36) on TokenCapitalString
 45: reduce/reduce conflict  (red'ns 47 and 36) on TokenString
state 45
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL.ParseModuleBody ParseEncodingControlSections END_SYMBOL 
	ParseModuleBody: .    (32)
	ParseImports: .    (47)
	ParseExports: .    (36)

	EXPORTS_SYMBOL  shift 51
	IMPORTS_SYMBOL  shift 50
	TokenCapitalString  reduce 36 (src line 780)
	TokenString  reduce 36 (src line 780)
	.  reduce 32 (src line 752)

	ParseModuleBody  goto 47
	ParseImports  goto 48
	ParseExports  goto 49

state 46
	ParseAssignementSymbol:  COLON COLON.EQUALITY 

	EQUALITY  shift 52
	.  error


47: shift/reduce conflict (shift 55(0), red'n 7(0)) on ENCODINGCONTROL_SYMBOL
state 47
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody.ParseEncodingControlSections END_SYMBOL 
	ParseEncodingControlSections: .    (7)

	ENCODINGCONTROL_SYMBOL  shift 55
	.  reduce 7 (src line 536)

	ParseEncodingControlSections  goto 53
	ParseEncodingControlSection  goto 54

state 48
	ParseModuleBody:  ParseImports.ParseExports ParseAssignmentList 
	ParseExports: .    (36)

	EXPORTS_SYMBOL  shift 51
	.  reduce 36 (src line 780)

	ParseExports  goto 56

state 49
	ParseModuleBody:  ParseExports.ParseImports ParseAssignmentList 
	ParseImports: .    (47)

	IMPORTS_SYMBOL  shift 50
	.  reduce 47 (src line 875)

	ParseImports  goto 57

state 50
	ParseImports:  IMPORTS_SYMBOL.ParseSymbolsImported SEMI_COMMA 
	ParseSymbolsImported: .    (49)

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 49 (src line 889)

	ParseSymbolsImported  goto 58
	ParseSymbolsFromModuleList  goto 59
	ParseSymbolsFromModule  goto 60
	ParseSymbolList  goto 61
	ParseSymbol  goto 62
	ParseReference  goto 63
	ParseParameterizedReference  goto 64
	ParseString  goto 65

51: shift/reduce conflict (shift 68(0), red'n 38(0)) on SEMI_COMMA
state 51
	ParseExports:  EXPORTS_SYMBOL.ParseSymbolsExported SEMI_COMMA 
	ParseExports:  EXPORTS_SYMBOL.ALL_SYMBOL SEMI_COMMA 
	ParseExports:  EXPORTS_SYMBOL.SEMI_COMMA 
	ParseSymbolsExported: .    (38)

	SEMI_COMMA  shift 68
	ALL_SYMBOL  shift 67
	TokenCapitalString  shift 6
	TokenString  shift 7
	.  error

	ParseSymbolsExported  goto 66
	ParseSymbolList  goto 69
	ParseSymbol  goto 62
	ParseReference  goto 63
	ParseParameterizedReference  goto 64
	ParseString  goto 65

state 52
	ParseAssignementSymbol:  COLON COLON EQUALITY.    (549)

	.  reduce 549 (src line 4734)


53: shift/reduce conflict (shift 55(0), red'n 7(0)) on ENCODINGCONTROL_SYMBOL
53: shift/reduce conflict (shift 70(0), red'n 7(0)) on END_SYMBOL
state 53
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections.END_SYMBOL 
	ParseEncodingControlSections:  ParseEncodingControlSections.ParseEncodingControlSections 
	ParseEncodingControlSections: .    (7)

	ENCODINGCONTROL_SYMBOL  shift 55
	END_SYMBOL  shift 70
	.  error

	ParseEncodingControlSections  goto 71
	ParseEncodingControlSection  goto 54

state 54
	ParseEncodingControlSections:  ParseEncodingControlSection.    (5)

	.  reduce 5 (src line 526)


state 55
	ParseEncodingControlSection:  ENCODINGCONTROL_SYMBOL.TokenCapitalString ParseEncodingInstructionAssignmentList 

	TokenCapitalString  shift 72
	.  error


56: shift/reduce conflict (shift 6(0), red'n 72(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 72(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 527) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 527) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 527(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 527(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 528) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 528) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 528(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 528(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 529) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 529) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 529(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 529(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 530) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 530) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 530(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 530(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 531) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 531) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 531(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 531(0)) on TokenString
 56: reduce/reduce conflict  (red'ns 72 and 532) on ENCODINGCONTROL_SYMBOL
 56: reduce/reduce conflict  (red'ns 72 and 532) on END_SYMBOL
56: shift/reduce conflict (shift 6(0), red'n 532(0)) on TokenCapitalString
56: shift/reduce conflict (shift 7(0), red'n 532(0)) on TokenString
state 56
	ParseModuleBody:  ParseImports ParseExports.ParseAssignmentList 
	ParseAssignmentList: .    (72)
	ParseParameterizedTypeAssignment: .    (527)
	ParseParameterizedValueAssignment: .    (528)
	ParseParameterizedValueSetTypeAssignment: .    (529)
	ParseParameterizedObjectClassAssignment: .    (530)
	ParseParameterizedObjectAssignment: .    (531)
	ParseParameterizedObjectSetAssignment: .    (532)

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 72 (src line 1073)

	ParseAssignmentList  goto 73
	ParseAssignment  goto 74
	ParseTypeAssignment  goto 75
	ParseValueAssignment  goto 76
	ParseXMLValueAssignment  goto 77
	ParseValueSetTypeAssignment  goto 78
	ParseObjectClassAssignment  goto 79
	ParseObjectAssignment  goto 80
	ParseObjectSetAssignment  goto 81
	ParseParameterizedAssignment  goto 82
	ParseParameterizedTypeAssignment  goto 84
	ParseParameterizedValueAssignment  goto 85
	ParseParameterizedValueSetTypeAssignment  goto 86
	ParseParameterizedObjectClassAssignment  goto 87
	ParseParameterizedObjectAssignment  goto 88
	ParseParameterizedObjectSetAssignment  goto 89
	ParseString  goto 83

57: shift/reduce conflict (shift 6(0), red'n 72(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 72(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 527) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 527) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 527(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 527(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 528) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 528) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 528(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 528(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 529) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 529) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 529(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 529(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 530) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 530) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 530(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 530(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 531) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 531) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 531(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 531(0)) on TokenString
 57: reduce/reduce conflict  (red'ns 72 and 532) on ENCODINGCONTROL_SYMBOL
 57: reduce/reduce conflict  (red'ns 72 and 532) on END_SYMBOL
57: shift/reduce conflict (shift 6(0), red'n 532(0)) on TokenCapitalString
57: shift/reduce conflict (shift 7(0), red'n 532(0)) on TokenString
state 57
	ParseModuleBody:  ParseExports ParseImports.ParseAssignmentList 
	ParseAssignmentList: .    (72)
	ParseParameterizedTypeAssignment: .    (527)
	ParseParameterizedValueAssignment: .    (528)
	ParseParameterizedValueSetTypeAssignment: .    (529)
	ParseParameterizedObjectClassAssignment: .    (530)
	ParseParameterizedObjectAssignment: .    (531)
	ParseParameterizedObjectSetAssignment: .    (532)

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 72 (src line 1073)

	ParseAssignmentList  goto 90
	ParseAssignment  goto 74
	ParseTypeAssignment  goto 75
	ParseValueAssignment  goto 76
	ParseXMLValueAssignment  goto 77
	ParseValueSetTypeAssignment  goto 78
	ParseObjectClassAssignment  goto 79
	ParseObjectAssignment  goto 80
	ParseObjectSetAssignment  goto 81
	ParseParameterizedAssignment  goto 82
	ParseParameterizedTypeAssignment  goto 84
	ParseParameterizedValueAssignment  goto 85
	ParseParameterizedValueSetTypeAssignment  goto 86
	ParseParameterizedObjectClassAssignment  goto 87
	ParseParameterizedObjectAssignment  goto 88
	ParseParameterizedObjectSetAssignment  goto 89
	ParseString  goto 83

state 58
	ParseImports:  IMPORTS_SYMBOL ParseSymbolsImported.SEMI_COMMA 

	SEMI_COMMA  shift 91
	.  error


state 59
	ParseSymbolsImported:  ParseSymbolsFromModuleList.    (48)
	ParseSymbolsFromModuleList:  ParseSymbolsFromModuleList.ParseSymbolsFromModule 

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 48 (src line 885)

	ParseSymbolsFromModule  goto 92
	ParseSymbolList  goto 61
	ParseSymbol  goto 62
	ParseReference  goto 63
	ParseParameterizedReference  goto 64
	ParseString  goto 65

state 60
	ParseSymbolsFromModuleList:  ParseSymbolsFromModule.    (50)

	.  reduce 50 (src line 899)


state 61
	ParseSymbolList:  ParseSymbolList.COMMA ParseSymbol 
	ParseSymbolsFromModule:  ParseSymbolList.FROM_SYMBOL ParseGlobalModuleReference 

	COMMA  shift 93
	FROM_SYMBOL  shift 94
	.  error


state 62
	ParseSymbolList:  ParseSymbol.    (39)

	.  reduce 39 (src line 806)


 63: reduce/reduce conflict  (red'ns 41 and 44) on COMMA
 63: reduce/reduce conflict  (red'ns 41 and 44) on SEMI_COMMA
 63: reduce/reduce conflict  (red'ns 41 and 44) on FROM_SYMBOL
state 63
	ParseSymbol:  ParseReference.    (41)
	ParseParameterizedReference:  ParseReference.    (44)
	ParseParameterizedReference:  ParseReference.CURLY_START CURLY_END 

	CURLY_START  shift 95
	.  reduce 41 (src line 823)


state 64
	ParseSymbol:  ParseParameterizedReference.    (42)

	.  reduce 42 (src line 829)


state 65
	ParseReference:  ParseString.    (43)

	.  reduce 43 (src line 844)


state 66
	ParseExports:  EXPORTS_SYMBOL ParseSymbolsExported.SEMI_COMMA 

	SEMI_COMMA  shift 96
	.  error


state 67
	ParseExports:  EXPORTS_SYMBOL ALL_SYMBOL.SEMI_COMMA 

	SEMI_COMMA  shift 97
	.  error


state 68
	ParseExports:  EXPORTS_SYMBOL SEMI_COMMA.    (35)

	.  reduce 35 (src line 775)


state 69
	ParseSymbolsExported:  ParseSymbolList.    (37)
	ParseSymbolList:  ParseSymbolList.COMMA ParseSymbol 

	COMMA  shift 93
	.  reduce 37 (src line 792)


state 70
	ParseModule:  ParseModuleIdentifier DEFINITIONS_SYMBOL ParseEncodingReferenceDefault ParseTagDefault ParseExtensionDefault ParseAssignementSymbol BEGIN_SYMBOL ParseModuleBody ParseEncodingControlSections END_SYMBOL.    (4)

	.  reduce 4 (src line 500)


71: shift/reduce conflict (shift 55(0), red'n 6(0)) on ENCODINGCONTROL_SYMBOL
71: shift/reduce conflict (shift 55(0), red'n 7(0)) on ENCODINGCONTROL_SYMBOL
 71: reduce/reduce conflict  (red'ns 6 and 7) on END_SYMBOL
state 71
	ParseEncodingControlSections:  ParseEncodingControlSections.ParseEncodingControlSections 
	ParseEncodingControlSections:  ParseEncodingControlSections ParseEncodingControlSections.    (6)
	ParseEncodingControlSections: .    (7)

	ENCODINGCONTROL_SYMBOL  shift 55
	.  reduce 6 (src line 532)

	ParseEncodingControlSections  goto 71
	ParseEncodingControlSection  goto 54

state 72
	ParseEncodingControlSection:  ENCODINGCONTROL_SYMBOL TokenCapitalString.ParseEncodingInstructionAssignmentList 
	ParseEncodingInstructionAssignmentList: .    (9)

	.  reduce 9 (src line 561)

	ParseEncodingInstructionAssignmentList  goto 98

 73: reduce/reduce conflict  (red'ns 30 and 527) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 527) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 527(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 527(0)) on TokenString
 73: reduce/reduce conflict  (red'ns 30 and 528) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 528) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 528(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 528(0)) on TokenString
 73: reduce/reduce conflict  (red'ns 30 and 529) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 529) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 529(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 529(0)) on TokenString
 73: reduce/reduce conflict  (red'ns 30 and 530) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 530) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 530(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 530(0)) on TokenString
 73: reduce/reduce conflict  (red'ns 30 and 531) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 531) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 531(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 531(0)) on TokenString
 73: reduce/reduce conflict  (red'ns 30 and 532) on ENCODINGCONTROL_SYMBOL
 73: reduce/reduce conflict  (red'ns 30 and 532) on END_SYMBOL
73: shift/reduce conflict (shift 6(0), red'n 532(0)) on TokenCapitalString
73: shift/reduce conflict (shift 7(0), red'n 532(0)) on TokenString
state 73
	ParseModuleBody:  ParseImports ParseExports ParseAssignmentList.    (30)
	ParseAssignmentList:  ParseAssignmentList.ParseAssignment 
	ParseParameterizedTypeAssignment: .    (527)
	ParseParameterizedValueAssignment: .    (528)
	ParseParameterizedValueSetTypeAssignment: .    (529)
	ParseParameterizedObjectClassAssignment: .    (530)
	ParseParameterizedObjectAssignment: .    (531)
	ParseParameterizedObjectSetAssignment: .    (532)

	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 30 (src line 733)

	ParseAssignment  goto 99
	ParseTypeAssignment  goto 75
	ParseValueAssignment  goto 76
	ParseXMLValueAssignment  goto 77
	ParseValueSetTypeAssignment  goto 78
	ParseObjectClassAssignment  goto 79
	ParseObjectAssignment  goto 80
	ParseObjectSetAssignment  goto 81
	ParseParameterizedAssignment  goto 82
	ParseParameterizedTypeAssignment  goto 84
	ParseParameterizedValueAssignment  goto 85
	ParseParameterizedValueSetTypeAssignment  goto 86
	ParseParameterizedObjectClassAssignment  goto 87
	ParseParameterizedObjectAssignment  goto 88
	ParseParameterizedObjectSetAssignment  goto 89
	ParseString  goto 83

state 74
	ParseAssignmentList:  ParseAssignment.    (70)

	.  reduce 70 (src line 1063)


state 75
	ParseAssignment:  ParseTypeAssignment.    (73)

	.  reduce 73 (src line 1089)


state 76
	ParseAssignment:  ParseValueAssignment.    (74)

	.  reduce 74 (src line 1095)


state 77
	ParseAssignment:  ParseXMLValueAssignment.    (75)

	.  reduce 75 (src line 1100)


state 78
	ParseAssignment:  ParseValueSetTypeAssignment.    (76)

	.  reduce 76 (src line 1105)


state 79
	ParseAssignment:  ParseObjectClassAssignment.    (77)

	.  reduce 77 (src line 1110)


state 80
	ParseAssignment:  ParseObjectAssignment.    (78)

	.  reduce 78 (src line 1115)


state 81
	ParseAssignment:  ParseObjectSetAssignment.    (79)

	.  reduce 79 (src line 1120)


state 82
	ParseAssignment:  ParseParameterizedAssignment.    (80)

	.  reduce 80 (src line 1125)


83: shift/reduce conflict (shift 42(0), red'n 524(0)) on COLON
state 83
	ParseTypeAssignment:  ParseString.ParseAssignementSymbol ParseType 
	ParseValueAssignment:  ParseString.ParseType ParseAssignementSymbol ParseValue 
	ParseXMLValueAssignment:  ParseString.ParseAssignementSymbol ParseXMLTypedValue 
	ParseValueSetTypeAssignment:  ParseString.ParseType ParseAssignementSymbol ParseValueSet 
	ParseObjectClassAssignment:  ParseString.ParseAssignementSymbol ParseObjectClass 
	ParseObjectAssignment:  ParseString.ParseDefinedObjectClass ParseAssignementSymbol ParseObject 
	ParseObjectSetAssignment:  ParseString.ParseDefinedObjectClass ParseAssignementSymbol ParseObjectSet 
	ParseDefinedObjectClass: .    (524)

	SQUARE_START  shift 194
	COLON  shift 42
	BIT_SYMBOL  shift 139
	BMPSTRING_SYMBOL  shift 180
	BOOLEAN_SYMBOL  shift 140
	CHARACTER_SYMBOL  shift 186
	CHOICE_SYMBOL  shift 143
	DATE_SYMBOL  shift 144
	DATETIME_SYMBOL  shift 145
	DURATION_SYMBOL  shift 146
	EMBEDDED_SYMBOL  shift 147
	ENUMERATED_SYMBOL  shift 148
	EXTERNEL_SYMBOL  shift 149
	GENERALIZEDTIME_SYMBOL  shift 182
	GENERALSTRING_SYMBOL  shift 176
	GRAPHICSTRING_SYMBOL  shift 170
	IA5STRING_SYMBOL  shift 181
	INSTANCE_SYMBOL  shift 150
	INTEGER_SYMBOL  shift 151
	ISO646STRING_SYMBOL  shift 174
	NULL_SYMBOL  shift 153
	NUMERICSTRING_SYMBOL  shift 171
	OBJECT_SYMBOL  shift 154
	OBJECTDESCRIPTOR_SYMBOL  shift 184
	OCTET_SYMBOL  shift 155
	OIDIRI_SYMBOL  shift 152
	PRINTABLESTRING_SYMBOL  shift 173
	REAL_SYMBOL  shift 156
	RELATIVEOID_SYMBOL  shift 158
	RELATIVEOIDIRI_SYMBOL  shift 157
	SEQUENCE_SYMBOL  shift 159
	SET_SYMBOL  shift 160
	T61STRING_SYMBOL  shift 177
	TELETEXSTRING_SYMBOL  shift 175
	TIME_SYMBOL  shift 163
	TIMEOFDAY_SYMBOL  shift 164
	UNIVERSALSTRING_SYMBOL  shift 178
	UTCTIME_SYMBOL  shift 183
	UTF8STRING_SYMBOL  shift 169
	VIDEOTEXSTRING_SYMBOL  shift 179
	VISIBLESTRING_SYMBOL  shift 172
	TokenCapitalString  shift 6
	TokenString  shift 7
	.  reduce 524 (src line 4594)
